--- a/paper/simulation/data_simulaltion_paper.ipynb
+++ b/paper/simulation/data_simulaltion_paper.ipynb
@@ -18,12 +18,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 62,
    "id": "13788c0c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-09T09:59:04.045634Z",
-     "start_time": "2024-03-09T09:59:04.037865Z"
+     "end_time": "2024-03-09T10:12:08.782398Z",
+     "start_time": "2024-03-09T10:12:08.777081Z"
     }
    },
    "outputs": [],
@@ -44,12 +44,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 63,
    "id": "77f0bc0c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-09T09:59:04.060424Z",
-     "start_time": "2024-03-09T09:59:04.048651Z"
+     "end_time": "2024-03-09T10:12:09.130029Z",
+     "start_time": "2024-03-09T10:12:09.124522Z"
     }
    },
    "outputs": [],
@@ -78,13 +78,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 64,
    "id": "2c764e7178a8f589",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-09T09:59:04.072862Z",
-     "start_time": "2024-03-09T09:59:04.064439Z"
+     "end_time": "2024-03-09T10:12:09.229668Z",
+     "start_time": "2024-03-09T10:12:09.224074Z"
     }
    },
    "outputs": [],
@@ -118,12 +118,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 65,
    "id": "c0601192",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-09T09:59:04.087952Z",
-     "start_time": "2024-03-09T09:59:04.075873Z"
+     "end_time": "2024-03-09T10:12:09.396610Z",
+     "start_time": "2024-03-09T10:12:09.389684Z"
     }
    },
    "outputs": [],
@@ -157,12 +157,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 66,
    "id": "0de1d9f9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-09T09:59:04.106386Z",
-     "start_time": "2024-03-09T09:59:04.090963Z"
+     "end_time": "2024-03-09T10:12:09.451497Z",
+     "start_time": "2024-03-09T10:12:09.440663Z"
     }
    },
    "outputs": [],
@@ -181,12 +181,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 67,
    "id": "977c9907",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-09T09:59:04.121490Z",
-     "start_time": "2024-03-09T09:59:04.109396Z"
+     "end_time": "2024-03-09T10:12:09.528797Z",
+     "start_time": "2024-03-09T10:12:09.518506Z"
     }
    },
    "outputs": [],
@@ -216,13 +216,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 68,
    "id": "9fedf5af5100ae6e",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-09T09:59:04.133969Z",
-     "start_time": "2024-03-09T09:59:04.123499Z"
+     "end_time": "2024-03-09T10:12:09.588877Z",
+     "start_time": "2024-03-09T10:12:09.581807Z"
     }
    },
    "outputs": [],
@@ -258,13 +258,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 69,
    "id": "ce3ca09949438a72",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-09T09:59:04.153584Z",
-     "start_time": "2024-03-09T09:59:04.135984Z"
+     "end_time": "2024-03-09T10:12:09.817977Z",
+     "start_time": "2024-03-09T10:12:09.806886Z"
     }
    },
    "outputs": [],
@@ -283,13 +283,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 70,
    "id": "96588585369cb3b8",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-09T09:59:04.170908Z",
-     "start_time": "2024-03-09T09:59:04.157610Z"
+     "end_time": "2024-03-09T10:12:09.867463Z",
+     "start_time": "2024-03-09T10:12:09.855989Z"
     }
    },
    "outputs": [],
@@ -319,13 +319,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 71,
    "id": "3e8c80320d5cf856",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-09T09:59:04.181322Z",
-     "start_time": "2024-03-09T09:59:04.172918Z"
+     "end_time": "2024-03-09T10:12:09.942613Z",
+     "start_time": "2024-03-09T10:12:09.933471Z"
     }
    },
    "outputs": [],
@@ -361,13 +361,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 72,
    "id": "df8380450ef430f",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-09T09:59:04.203189Z",
-     "start_time": "2024-03-09T09:59:04.183336Z"
+     "end_time": "2024-03-09T10:12:10.055230Z",
+     "start_time": "2024-03-09T10:12:10.043627Z"
     }
    },
    "outputs": [],
@@ -386,13 +386,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 73,
    "id": "d27354189af7f40d",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-09T09:59:04.248897Z",
-     "start_time": "2024-03-09T09:59:04.206204Z"
+     "end_time": "2024-03-09T10:12:10.223338Z",
+     "start_time": "2024-03-09T10:12:10.212247Z"
     }
    },
    "outputs": [],
@@ -422,13 +422,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 74,
    "id": "9eb01863b6520d6d",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-09T09:59:04.262085Z",
-     "start_time": "2024-03-09T09:59:04.251910Z"
+     "end_time": "2024-03-09T10:12:10.278044Z",
+     "start_time": "2024-03-09T10:12:10.270399Z"
     }
    },
    "outputs": [],
@@ -464,13 +464,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 75,
    "id": "d06cc7229d7e0cc",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-09T09:59:04.287036Z",
-     "start_time": "2024-03-09T09:59:04.272097Z"
+     "end_time": "2024-03-09T10:12:10.437279Z",
+     "start_time": "2024-03-09T10:12:10.426052Z"
     }
    },
    "outputs": [],
@@ -489,13 +489,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 76,
    "id": "b3a04c609ea880a6",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-09T09:59:04.304841Z",
-     "start_time": "2024-03-09T09:59:04.290050Z"
+     "end_time": "2024-03-09T10:12:10.525475Z",
+     "start_time": "2024-03-09T10:12:10.513289Z"
     }
    },
    "outputs": [],
@@ -531,12 +531,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 77,
    "id": "610223da",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-09T09:59:04.334200Z",
-     "start_time": "2024-03-09T09:59:04.307851Z"
+     "end_time": "2024-03-09T10:12:10.607001Z",
+     "start_time": "2024-03-09T10:12:10.587490Z"
     }
    },
    "outputs": [],
@@ -591,12 +591,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 78,
    "id": "7c0c4536",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-09T09:59:04.365193Z",
-     "start_time": "2024-03-09T09:59:04.337217Z"
+     "end_time": "2024-03-09T10:12:10.662483Z",
+     "start_time": "2024-03-09T10:12:10.639012Z"
     }
    },
    "outputs": [],
@@ -648,12 +648,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 79,
    "id": "410ef4ba",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-09T09:59:04.388230Z",
-     "start_time": "2024-03-09T09:59:04.367203Z"
+     "end_time": "2024-03-09T10:12:10.731008Z",
+     "start_time": "2024-03-09T10:12:10.711493Z"
     }
    },
    "outputs": [],
@@ -707,13 +707,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 80,
    "id": "ded4f3a6a058af0",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-09T09:59:04.400421Z",
-     "start_time": "2024-03-09T09:59:04.390243Z"
+     "end_time": "2024-03-09T10:12:10.814352Z",
+     "start_time": "2024-03-09T10:12:10.807023Z"
     }
    },
    "outputs": [],
@@ -757,13 +757,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 81,
    "id": "fea79e6d362977c0",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-09T09:59:04.422164Z",
-     "start_time": "2024-03-09T09:59:04.403433Z"
+     "end_time": "2024-03-09T10:12:10.953750Z",
+     "start_time": "2024-03-09T10:12:10.939362Z"
     }
    },
    "outputs": [],
@@ -782,13 +782,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 82,
    "id": "b63dcf3fa037d5f1",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-09T09:59:04.438863Z",
-     "start_time": "2024-03-09T09:59:04.424173Z"
+     "end_time": "2024-03-09T10:12:11.053082Z",
+     "start_time": "2024-03-09T10:12:11.040760Z"
     }
    },
    "outputs": [],
@@ -816,12 +816,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-09T09:59:04.449760Z",
-     "start_time": "2024-03-09T09:59:04.441880Z"
+     "end_time": "2024-03-09T10:12:11.083749Z",
+     "start_time": "2024-03-09T10:12:11.077092Z"
     }
    },
    "id": "f070d92337a0f1eb",
-   "execution_count": 49
+   "execution_count": 83
   },
   {
    "cell_type": "markdown",
@@ -835,12 +835,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 84,
    "id": "952ff883",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-09T09:59:08.409809Z",
-     "start_time": "2024-03-09T09:59:04.451770Z"
+     "end_time": "2024-03-09T10:12:15.396870Z",
+     "start_time": "2024-03-09T10:12:11.129792Z"
     }
    },
    "outputs": [
@@ -950,12 +950,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-09T09:59:10.608374Z",
-     "start_time": "2024-03-09T09:59:08.412826Z"
+     "end_time": "2024-03-09T10:12:17.517727Z",
+     "start_time": "2024-03-09T10:12:15.400889Z"
     }
    },
    "id": "8bdf2d56a4cea32c",
-   "execution_count": 51
+   "execution_count": 85
   },
   {
    "cell_type": "markdown",
@@ -1020,12 +1020,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-09T10:01:42.295868Z",
-     "start_time": "2024-03-09T10:01:39.706331Z"
+     "end_time": "2024-03-09T10:12:19.111291Z",
+     "start_time": "2024-03-09T10:12:17.519737Z"
     }
    },
    "id": "92642a4db8522601",
-   "execution_count": 57
+   "execution_count": 86
   },
   {
    "cell_type": "code",
@@ -1055,12 +1055,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-09T10:01:59.654535Z",
-     "start_time": "2024-03-09T10:01:57.536599Z"
+     "end_time": "2024-03-09T10:12:20.188017Z",
+     "start_time": "2024-03-09T10:12:19.114300Z"
     }
    },
    "id": "1f2349378903fb3c",
-   "execution_count": 58
+   "execution_count": 87
   },
   {
    "cell_type": "markdown",
@@ -1072,26 +1072,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 88,
    "id": "cd8ed32e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-03-09T09:59:13.225367Z",
-     "start_time": "2024-03-09T09:59:13.185957Z"
+     "end_time": "2024-03-09T10:12:20.248235Z",
+     "start_time": "2024-03-09T10:12:20.191032Z"
     }
    },
    "outputs": [],
    "source": [
     "for i, series in enumerate(series_list):\n",
+    "    var_names = series_names[i]\n",
     "    if i < 4:\n",
     "        # Rename series\n",
-    "        series.name = 'y'\n",
+    "        series.name = var_names\n",
     "    else:\n",
     "        # Extra treatment for SARIMAX\n",
     "        # Concatenate the series to a dataframe\n",
     "        series = pd.concat([series, exo1_ts, exo2_ts, exo3_ts], axis=1)\n",
-    "        # Rename Columns\n",
-    "        series.columns = ['y', \"x1\", \"x2\", \"x3\"]\n",
+    "        var_names = [var_names] + [\"x1\", \"x2\", \"x3\"]\n",
+    "    # Rename Columns\n",
+    "    series.columns = var_names\n",
     "    # Rename Index to 'Date'\n",
     "    series.index.name = \"Date\"\n",
     "    # Optionally, you can format the 'Date' column as 'YYYY-MM-DD'\n",
@@ -1099,6 +1101,20 @@
     "    # Export\n",
     "    series.to_csv(os.path.join(SIMDATA_DIR, series_names[i] + \".csv\"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-09T10:12:20.255976Z",
+     "start_time": "2024-03-09T10:12:20.251247Z"
+    }
+   },
+   "id": "58e00eb45d6ce0e8",
+   "execution_count": 88
   }
  ],
  "metadata": {
